# Stockelper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  init-multiple-db.sh  pre-commit-guide.md  requirements.txt
database/: doc.py  (+3 more)
llm-server/: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  example.env  langgraph.json  main.py  pyproject.toml  requirements.txt  sample_nvda_investment_report.md  sample_samsung_investment_report.md  set.csv  set.json  test_tool.py
llm-server/database/: init-db.sql
llm-server/src/: main.py  upload_user.py
llm-server/src/frontend/: streamlit_app.py
llm-server/src/multi_agent/: __init__.py  agent.py  prompt.py  state.py  utils.py
llm-server/src/multi_agent/base/: __init__.py  analysis_agent.py
llm-server/src/multi_agent/fundamental_analysis_agent/: __init__.py
llm-server/src/multi_agent/investment_strategy_agent/: agent.py  prompt.py
llm-server/src/multi_agent/investment_strategy_agent/tools/: __init__.py  account.py  search.py
llm-server/src/multi_agent/market_analysis_agent/: __init__.py  prompt.py
llm-server/src/multi_agent/portfolio_analysis_agent/: __init__.py  agent.py
llm-server/src/multi_agent/supervisor_agent/: agent.py
llm-server/src/multi_agent/technical_analysis_agent/: __init__.py
llm-server/src/routers/: models.py  stock.py
llm-server/src/tools/: __init__.py  account.py  chart_analysis_tool.py  dart.py  graph_qa.py  news.py  report.py  search.py  sentiment.py  stock.py  youtube_tool.py
(+33 files in other folders)
